# dtkcore

./: .clang-format  .clog.toml  .gitignore  .packit.yaml  .project.json  .qmake.conf  .release.json  .syncexclude  CHANGELOG.md  CMakeLists.txt  Changelog.md  README.md  README.zh_CN.md  conanfile.py  dtk_build_config.prf  dtkcore.cmake  dtkcore.pro  dummy.sh  linglong.yaml  test.txt
docs/: CMakeLists.txt  MainPage.zh_CN.md  dsysinfo.zh_CN.dox
docs/dci/: ddcifile.zh_CN.dox  index.zh_CN.md
docs/doxygentheme/: header.html
docs/filesystem/: dbasefilewatcher.zh_CN.dox  dcapfile.zh_CN.dox  dfilesystemwatcher.zh_CN.dox  dfilewarcher.zh_CN.dox  dfilewatchermanager.zh_CN.dox  dstandardpaths.zh_CN.dox  dtrashmanager.zh_CN.dox  index.zh_CN.md
docs/global/: dconfig.zh_CN.dox  dconfigfile.zh_CN.dox  ddesktopentry.zh_CN.dox  dlicenseinfo.zh_CN.dox  dsysinfo.zh_CN.dox  index.zh_CN.md
docs/log/: AbstractAppender.zh_CN.dox  AbstractStringAppender.zh_CN.dox  ConsoleAppender.zh_CN.dox  FileAppender.zh_CN.dox  Logger.zh_CN.dox  RollingFileAppender.zh_CN.dox  dlogmanager.zh_CN.dox  index.zh_CN.md
docs/references/: DConfig.doc
docs/settings/: dsettings.zh_CN.dox  dsettingsgroup.zh_CN.dox  dsettingsoption.zh_CN.dox  index.zh_CN.md
docs/util/: dabstractunitformatter.zh_CN.dox  ddbusextentedabstractinterface.zh_CN.dox  ddbussender.zh_CN.dox  ddisksizeformatter.zh_CN.dox  dtextencoding.zh_CN.dox  dthreadutils.zh_CN.dox  dtimeunitformatter.zh_CN.dox  dutil.zh_CN.dox  index.zh_CN.md
examples/dasync-example/: CMakeLists.txt  dasync-example.pro  main.cpp
examples/dlog-example/: CMakeLists.txt  main.cpp
examples/expintf-example/: CMakeLists.txt  expintf-example.pro  main.cpp
examples/filewatcher-example/: CMakeLists.txt  main.cpp
examples/textcodec-example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  DDesktopEntry  com.deepin.dtk.gschema.xml  dconfig.cpp  dconfig.h  dconfigfile.cpp  dconfigfile.h  ddesktopentry.cpp  ddesktopentry.h  dlicenseinfo.cpp  dlicenseinfo.h  dsecurestring.cpp  dsecurestring.h  dsgapplication.cpp  dsgapplication.h  dsysinfo.cpp  dsysinfo.h  dtk_build.prf  dtk_cmake.prf  dtk_lib.prf  dtk_module.prf  dtk_qmake.prf  dtk_translation.prf  dtkcore_global.cpp  dtkcore_global.h  glob.cmake  install.pri  lib.pri  src.pro  version.pri
src/base/: base.cmake  base.pri  dbase.pri  dobject.cpp  dobject.h  dsingleton.h
src/dbus/: dbus.cmake  org.desktopspec.ConfigManager.Manager.xml  org.desktopspec.ConfigManager.xml
src/dci/: DDciFile  dci.cmake  dci.pri  ddcifile.cpp  ddcifile.h
src/filesystem/: dbasefilewatcher.cpp  dbasefilewatcher.h  dcapfile.cpp  dcapfsfileengine.cpp  dcapmanager.cpp  dfilesystemwatcher.h  dfilesystemwatcher_dummy.cpp  dfilesystemwatcher_linux.cpp  dfilesystemwatcher_win.cpp  dfilewatcher.cpp  dfilewatcher.h  dfilewatchermanager.cpp  dfilewatchermanager.h  dpathbuf.cpp  dpathbuf.h  dstandardpaths.cpp  dstandardpaths.h  dtrashmanager.h  dtrashmanager_dummy.cpp  dtrashmanager_linux.cpp  filesystem.cmake  filesystem.pri
src/log/: AbstractAppender.cpp  AbstractStringAppender.cpp  ConsoleAppender.cpp  CuteLogger_global.h  FileAppender.cpp  JournalAppender.cpp  LogManager.cpp  LogManager.h  Logger.cpp  Logger.h  OutputDebugAppender.cpp  README.md  RollingFileAppender.cpp  RollingFileAppender.h  dconfig_org_deepin_dtk_preference.hpp  dloghelper.cpp  log.cmake  log.pri  rollingfilesink_p.h
src/settings/: DOption  dsettings.cpp  dsettings.h  dsettingsbackend.h  dsettingsgroup.cpp  dsettingsgroup.h  dsettingsoption.cpp  dsettingsoption.h  settings.cmake  settings.pri
src/util/: DDiskSizeFormatter  DEpollDispatcher  DFileServices  DNotifySender  DPinyin  DRecentManager  DThreadUtils  DVtableHook  README.dpinyin  dabstractunitformatter.cpp  dabstractunitformatter.h  dasync.h  ddbusextendedabstractinterface.cpp  ddbusextendedpendingcallwatcher.cpp  ddbusextendedpendingcallwatcher_p.h  ddbusinterface.cpp  ddbusinterface_p.h  ddbussender.cpp  ddbussender.h  ddisksizeformatter.cpp  ddisksizeformatter.h  depolldispatcher.h  dexportedinterface.cpp  dexportedinterface.h  dfileservices.h  dfileservices_dummy.cpp  dfileservices_linux.cpp  dnotifysender.cpp  dnotifysender.h  dpinyin.cpp  dpinyin.h  dplugin.cpp  dplugin_p.h  dprivateaccessor_p.h  drecentmanager.cpp  drecentmanager.h  dtextencoding.cpp  dthreadutils.cpp  dthreadutils.h  dtimedloop.cpp  (+12 more)
tests/: CMakeLists.txt  data.qrc  dtk_testcase.prf  dutiltester.cpp  dutiltester.h  main.cpp  singletontester.h  test-recoverage-qmake.sh  test-recoverage.sh  test_helper.hpp  tests.pro  ut_dasync.cpp  ut_dcapfile.cpp  ut_dconfig.cpp  ut_dconfig2cpp.cpp  ut_dconfig2cpp_dconfig_org_deepin_dtk_preference.cpp  ut_dconfigfile.cpp  ut_ddbusextendedabstractinterface.cpp  ut_ddbusinterface.cpp  ut_ddbussender.cpp  ut_ddci.cpp  ut_ddesktopentrytest.cpp  ut_ddisksizeformatter.cpp  ut_dexpected.cpp  ut_dexportedinterface.cpp  ut_dfilesystemwatcher.cpp  ut_dfilewatcher.cpp  ut_dfilewatchermanager.cpp  ut_dlicenseinfo.cpp  ut_dlog.cpp  ut_dnotifysender.cpp  ut_dpathbuf.cpp  ut_dpinyin.cpp  ut_drecentmanager.cpp  ut_dsecurestring.cpp  ut_dsettings.cpp  ut_dsgapplication.cpp  ut_dstandardpaths.cpp  ut_dsysinfo.cpp  ut_dtextencoding.cpp  (+11 more)
tests/data/: dconf-example.meta.json  dconf-example.override.json  dconf-example.override.noexistitem.json  dconf-example_other_app_configure.meta.json  dconf-global.meta.json  dconf-global.override.json  dconf-serial-test.meta.json  dconf-serial-test.override.json  example-license.json
tests/ddesktopentry/: CMakeLists.txt  ddesktopentry.pro  gts_ddesktopentrytest.cpp  tst_ddesktopentrytest.cpp  ut_ddesktopentrytest.cpp
tests/dthreadutils/: dthreadutils.pro  tst_dthreadutils.cpp  ut_dthreadutils.cpp
tests/dutils/: dutils.pro  dutiltester.cpp  dutiltester.h  main.cpp  singletontester.cpp  singletontester.h  ut_dutil.cpp  ut_dutil.h  ut_singleton.cpp  ut_singleton.h
tests/dvtablehook/: dvtablehook.pro  gts_dvtablehook.cpp  tst_dvtablehook.cpp  ut_dvtablehook.cpp
tests/fakedbus/: fakedbusservice.cpp  fakedbusservice.h
tests/testso/: CMakeLists.txt  testso.cpp  testso.h
(+197 files in other folders)
